[project]
name = "supply-chain-env"
version = "0.1.0"
description = "Supply Chain Disruption Manager OpenEnv environment"
authors = [
    { name="Kotesh", email="koteshch212@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

requires-python = ">=3.10"